# voicisst

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  flow.service  pyproject.toml  ydotoold.user.service
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-06-11T11-17-14-675Z.yml
docs/: CONFIGURATION.md  PLATFORMS.md  SERVER.md  TROUBLESHOOTING.md  UI-SPEC.md  UI.md
legacy/: flow.py  requirements.txt  setup.sh
packaging/macos/: com.flowdictation.flow.plist  one.octavia.voicisst.plist
packaging/pyinstaller/: entry.py  flow.spec  voicisst.spec
packaging/systemd/: flow.service  voicisst.service  ydotoold.service
scripts/: install.ps1  install.sh  setup-linux.sh  voicisst-gui
src/flow_dictation/: __init__.py  __main__.py  audio.py  cli.py  clipboard.py  config.py  dictation.py  notify.py  polish.py  protocol.py  selftest.py  streaming.py  textproc.py  transcribe.py  tray.py
src/flow_dictation/engine/: __init__.py  base.py  local.py  remote.py
src/flow_dictation/hotkeys/: base.py  evdev_listener.py  pynput_listener.py
src/flow_dictation/inject/: __init__.py  base.py  pynput_injector.py  windowinfo.py
src/flow_dictation/server/: __init__.py  app.py
src/voicisst/: __init__.py  __main__.py  audio.py  cli.py  clipboard.py  config.py  dictation.py  events.py  files.py  notify.py  overlay.py  polish.py  protocol.py  selftest.py  transcribe.py  tray.py
src/voicisst/engine/: __init__.py  base.py  local.py  remote.py
src/voicisst/hotkeys/: __init__.py  evdev_listener.py  pynput_listener.py
src/voicisst/inject/: __init__.py  pynput_injector.py  windowinfo.py  xdotool.py  ydotool.py
src/voicisst/server/: __init__.py  app.py
src/voicisst/ui/: __init__.py  server.py
src/voicisst/ui/static/: app.css  app.js  index.html
tests/: conftest.py  helpers.py  test_audio.py  test_cli.py  test_clipboard.py  test_dictation.py  test_engine.py  test_files.py  test_hotkeys.py  test_inject.py  test_notify.py  test_overlay.py  test_polish.py  test_protocol.py  test_server.py  test_streaming.py  test_transcribe.py  test_ui_server.py  test_ui_static.py
