[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flow-dictation"
version = "0.1.0"
description = "Free, open-source voice dictation: speech to clear, polished writing in every app. Local Whisper + LLM cleanup, client/server or all-in-one."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Lucy", email = "luke@octavia.one" }]
requires-python = ">=3.10"
keywords = [
    "dictation", "speech-to-text", "whisper", "voice", "accessibility",
    "wispr-flow", "stt", "push-to-talk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Adaptive Technologies",
]
dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.4",
    "requests>=2.31",
    "click>=8.1",
    "platformdirs>=3.0",
    "websocket-client>=1.6",
    "tomli>=2.0; python_version < '3.11'",
    "evdev>=1.7; sys_platform == 'linux'",
    "pynput>=1.7",
]

[project.optional-dependencies]
local = ["faster-whisper>=1.0"]
server = ["fastapi>=0.110", "uvicorn>=0.27", "faster-whisper>=1.0"]
tray = ["pystray>=0.19", "Pillow>=10.0"]
all = ["flow-dictation[local,server,tray]"]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.27"]

[project.scripts]
flow = "flow_dictation.cli:main"

[project.urls]
Homepage = "https://github.com/lucyfromnaarm/flow-dictation"
Issues = "https://github.com/lucyfromnaarm/flow-dictation/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/flow_dictation"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
