[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voicisst"
version = "0.2.1"
description = "Free, open-source voice dictation: speech to clear, polished writing in every app. Local Whisper + LLM cleanup, client/server or all-in-one."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Lucy", email = "luke@octavia.one" }]
requires-python = ">=3.10"
keywords = [
    "dictation", "speech-to-text", "whisper", "voice", "accessibility",
    "wispr-flow", "stt", "push-to-talk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Adaptive Technologies",
]
dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.4",
    "requests>=2.31",
    "click>=8.1",
    "platformdirs>=3.0",
    "websocket-client>=1.6",
    "tomli>=2.0; python_version < '3.11'",
    "evdev>=1.7; sys_platform == 'linux'",
    "pynput>=1.7",
]

[project.optional-dependencies]
local = ["faster-whisper>=1.0"]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "faster-whisper>=1.0"]
media = ["av>=12.0"]
tray = ["pystray>=0.19", "Pillow>=10.0"]
ui = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "tomlkit>=0.12"]
all = ["voicisst[local,server,media,tray,ui]"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "tomlkit>=0.12",
]

[project.scripts]
voicisst = "voicisst.cli:main"

[project.urls]
Homepage = "https://github.com/lucyfromnaarm/voicisst"
Issues = "https://github.com/lucyfromnaarm/voicisst/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/voicisst"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
